Name:                porter
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Mark Wotton, <mwotton@gmail.com>
Maintainer:          Mark Wotton, <mwotton@gmail.com>
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Build-Depends: haskell2010
  Hs-source-dirs:      src
  Exposed-Modules: Language.Porter

